// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`firebaseReducer reducer AUTH_STATUS_LOGGED_IN 1`] = `
Object {
  "appState": "READY",
  "auth": Object {
    "errors": Object {
      "resetPassword": null,
      "signIn": null,
      "signUp": null,
    },
    "inProgress": false,
    "user": Object {
      "email": "test@example.com",
      "uid": "testId",
    },
  },
  "chickens": Object {
    "data": Object {
      "item1": "item1value",
      "item2": "item2value",
    },
    "error": null,
    "inProgress": false,
    "initialized": false,
  },
  "initialUrl": null,
}
`;

exports[`firebaseReducer reducer missing initial state 1`] = `
Object {
  "appState": "STARTING",
  "auth": Object {
    "errors": Object {
      "resetPassword": null,
      "signIn": null,
      "signUp": null,
    },
    "inProgress": false,
    "user": null,
  },
  "chickens": Object {
    "data": Object {},
    "error": null,
    "inProgress": false,
    "initialized": false,
  },
  "deleteChicken": Object {
    "error": null,
    "inProgress": false,
  },
  "eggs": Object {
    "data": Object {},
    "error": null,
    "inProgress": false,
    "initialized": false,
  },
  "initialUrl": null,
}
`;

exports[`firebaseReducer reducer undefined initial state 1`] = `
Object {
  "appState": "STARTING",
  "auth": Object {
    "errors": Object {
      "resetPassword": null,
      "signIn": null,
      "signUp": null,
    },
    "inProgress": false,
    "user": null,
  },
  "chickens": Object {
    "data": Object {},
    "error": null,
    "inProgress": false,
    "initialized": false,
  },
  "deleteChicken": Object {
    "error": null,
    "inProgress": false,
  },
  "eggs": Object {
    "data": Object {},
    "error": null,
    "inProgress": false,
    "initialized": false,
  },
  "initialUrl": null,
}
`;
